# object_impedance_control

./: CMakeLists.txt  CreateRobotModule.sh  CreateWorldModule.sh  LICENSE  README.md  __init__.py  cmake_install.cmake  mainpage.dox  manifest.xml
AllegroHandObjImpController/include/: AllegroHandObjImpController.h
AllegroHandObjImpController/src/: AllegroHandObjImpController.cpp  VirtualFrameRecordExtractor.cpp
ControlTest/src/: ControlTest.cpp
MultiFingersObjImpController/include/: MultiFingersObjImpController.h
MultiFingersObjImpController/src/: MultiFingersObjImpController.cpp
ObjImpControllerNode/src/: main.cpp  main.cpp.~1~  main.cpp~
SaveGMMFile/: VirtualFrame_mu.txt  VirtualFrame_prio.txt  VirtualFrame_sigma.txt
SaveGMMFileFull/: VirtualFrame_mu.txt  VirtualFrame_prio.txt  readme.txt
SimAllegroInterface/include/: SimAllegroInterface.h
SimAllegroInterface/src/: SimAllegroInterface.cpp
Utilities/include/: Utilities.h
Utilities/src/: BulbDemoRecordExtractor.cpp  Utilities.cpp
config/: sim_kuka.xml  sim_kuka_allegro.xml
controllers/: object_impedance_controller.py
data/Robots/KUKA/: bbox.xml  shape.xml  structure.xml
data/Robots/KUKA/AllegroHand/: bbox.xml  left_hand.xml  left_hand.xml.gui  left_hand.xml.new  shape.xml  shape.xml.bak  shape.xml.left.backup  structure.xml
envs/: __init__.py  multiagent_box_env.py  multiagent_obj_env.py  multiarm_box_env.py
include/: GenericObjImpController.h
msg/: MultiFingersObjImpCtrlCmd.msg  MultiFingersObjImpCtrlCmd.msg.~1~
records/: plot.sh  record.sh  record_syn_allegro.sh
records/SaveGMMFile/: VirtualFrame_sigma.txt
records/bulb_demo/: plot.sh  record_all.sh
records/finger_motion/: playback.sh  playback_prep.sh  record.sh  record_data.sh  record_tmp.sh
scripts/: kinemode.sh  zero_obj_imp.sh
scripts/bulb_demo/: imp_small.sh  move_large.sh  move_large.sh~  rotate_extr_large.sh  rotate_large.sh  start.sh
scripts/bulb_demo/oldmsg/: imp_large.sh  imp_small.sh  rotate_small.sh
scripts/bulb_demo/oldsrv/: impmode.sh  rec_grasp.sh
scripts/bulb_syntouch_demo/: home.sh  imp_medium.sh  imp_small.sh  impmode.sh  rotate_extr_large.sh  rotate_medium.sh  rotate_tiny.sh  start.sh  start_comp.sh
scripts/bulb_syntouch_demo/oldsrv/: grasp.sh  start.sh
scripts/exploration/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  2014-02-05-22-12-33.bag  2014-02-05-22-13-16.bag  2014-02-05-22-14-19.bag  2014-02-05-22-14-43.bag  2014-02-05-22-15-07.bag  2014-02-05-22-16-45.bag  2014-02-05-22-17-26.bag  2014-02-05-22-18-28.bag  2014-02-05-22-18-46.bag  2014-02-05-22-19-03.bag  2014-02-05-22-19-49.bag  2014-02-05-22-20-36.bag  2014-02-05-22-20-54.bag  2014-02-05-22-21-15.bag  2014-02-05-22-21-33.bag  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  imp_large.sh  imp_large.sh~  imp_medium.sh
scripts/hand_writing_demo/: grasp.sh  imp_large.sh  imp_medium.sh  imp_small.sh  rec_grasp.sh  release.sh  rotate_large.sh  rotate_small.sh  start.sh  start.sh.bak
scripts/hand_writing_demo/oldmsg/: imp_medium.sh  rotate_extr_large.sh  rotate_large.sh  rotate_medium.sh  rotate_tiny.sh
scripts/hand_writing_demo/oldsrv/: home.sh  release.sh
srv/: ObjImpManipulationCmd.srv
tests/: test_multiagent_obj_imp_ctrl.py  test_multiarm_obj_imp_ctrl.py
utils/: args_utils.py  init_utils.py  math_utils.py
